add_library(aoc-day ${CMAKE_CURRENT_SOURCE_DIR}/aoc-day.cpp)

add_library(day1 ${CMAKE_CURRENT_SOURCE_DIR}/day1.cpp)
add_library(day2 ${CMAKE_CURRENT_SOURCE_DIR}/day2.cpp)
add_library(day3 ${CMAKE_CURRENT_SOURCE_DIR}/day3.cpp)
add_library(day4 ${CMAKE_CURRENT_SOURCE_DIR}/day4.cpp)
add_library(day5 ${CMAKE_CURRENT_SOURCE_DIR}/day5.cpp)
add_library(day6 ${CMAKE_CURRENT_SOURCE_DIR}/day6.cpp)
add_library(day7 ${CMAKE_CURRENT_SOURCE_DIR}/day7.cpp)
add_library(day8 ${CMAKE_CURRENT_SOURCE_DIR}/day8.cpp)
add_library(day9 ${CMAKE_CURRENT_SOURCE_DIR}/day9.cpp)

add_library(day10 ${CMAKE_CURRENT_SOURCE_DIR}/day10.cpp)
add_library(day11 ${CMAKE_CURRENT_SOURCE_DIR}/day11.cpp)
add_library(day12 ${CMAKE_CURRENT_SOURCE_DIR}/day12.cpp)
add_library(day13 ${CMAKE_CURRENT_SOURCE_DIR}/day13.cpp)
add_library(day14 ${CMAKE_CURRENT_SOURCE_DIR}/day14.cpp)
add_library(day15 ${CMAKE_CURRENT_SOURCE_DIR}/day15.cpp)
add_library(day16 ${CMAKE_CURRENT_SOURCE_DIR}/day16.cpp)
add_library(day17 ${CMAKE_CURRENT_SOURCE_DIR}/day17.cpp)
add_library(day18 ${CMAKE_CURRENT_SOURCE_DIR}/day18.cpp)
add_library(day19 ${CMAKE_CURRENT_SOURCE_DIR}/day19.cpp)

add_library(day20 ${CMAKE_CURRENT_SOURCE_DIR}/day20.cpp)
add_library(day21 ${CMAKE_CURRENT_SOURCE_DIR}/day21.cpp)
add_library(day22 ${CMAKE_CURRENT_SOURCE_DIR}/day22.cpp)
add_library(day23 ${CMAKE_CURRENT_SOURCE_DIR}/day23.cpp)
add_library(day24 ${CMAKE_CURRENT_SOURCE_DIR}/day24.cpp)
add_library(day25 ${CMAKE_CURRENT_SOURCE_DIR}/day25.cpp)

add_executable(aoc ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp)

target_link_libraries(day1 PUBLIC aoc-day)
target_link_libraries(day2 PUBLIC aoc-day)
target_link_libraries(day3 PUBLIC aoc-day)

target_link_libraries(day4 PUBLIC aoc-day)
target_link_libraries(day5 PUBLIC aoc-day)
target_link_libraries(day6 PUBLIC aoc-day)
target_link_libraries(day7 PUBLIC aoc-day)
target_link_libraries(day8 PUBLIC aoc-day)
target_link_libraries(day9 PUBLIC aoc-day)

target_link_libraries(day10 PUBLIC aoc-day)
target_link_libraries(day11 PUBLIC aoc-day)
target_link_libraries(day12 PUBLIC aoc-day)
target_link_libraries(day13 PUBLIC aoc-day)
target_link_libraries(day14 PUBLIC aoc-day)
target_link_libraries(day15 PUBLIC aoc-day)
target_link_libraries(day16 PUBLIC aoc-day)
target_link_libraries(day17 PUBLIC aoc-day)
target_link_libraries(day18 PUBLIC aoc-day)
target_link_libraries(day19 PUBLIC aoc-day)

target_link_libraries(day20 PUBLIC aoc-day)
target_link_libraries(day21 PUBLIC aoc-day)
target_link_libraries(day22 PUBLIC aoc-day)
target_link_libraries(day23 PUBLIC aoc-day)
target_link_libraries(day24 PUBLIC aoc-day)
target_link_libraries(day25 PUBLIC aoc-day)

target_link_libraries(aoc PRIVATE day1)
target_link_libraries(aoc PRIVATE day2)
target_link_libraries(aoc PRIVATE day3)

target_link_libraries(aoc PRIVATE day4)
target_link_libraries(aoc PRIVATE day5)
target_link_libraries(aoc PRIVATE day6)
target_link_libraries(aoc PRIVATE day7)
target_link_libraries(aoc PRIVATE day8)
target_link_libraries(aoc PRIVATE day9)

target_link_libraries(aoc PRIVATE day10)
target_link_libraries(aoc PRIVATE day11)
target_link_libraries(aoc PRIVATE day12)
target_link_libraries(aoc PRIVATE day13)
target_link_libraries(aoc PRIVATE day14)
target_link_libraries(aoc PRIVATE day15)
target_link_libraries(aoc PRIVATE day16)
target_link_libraries(aoc PRIVATE day17)
target_link_libraries(aoc PRIVATE day18)
target_link_libraries(aoc PRIVATE day19)

target_link_libraries(aoc PRIVATE day20)
target_link_libraries(aoc PRIVATE day21)
target_link_libraries(aoc PRIVATE day22)
target_link_libraries(aoc PRIVATE day23)
target_link_libraries(aoc PRIVATE day24)
target_link_libraries(aoc PRIVATE day25)

#set(CMAKE_INSTALL_PREFIX ${CMAKE_SOURCE_DIR}/bin)
install(TARGETS aoc)
